# netgrip

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE_GONE_WILD.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  windows-insider.yml
data/: io.github.theyoungrossco.netgrip.desktop  io.github.theyoungrossco.netgrip.metainfo.xml
docs/: 0.2-TEST-PLAN.md  0.3-PLAN.md  0.4-PLAN.md  ARCHITECTURE.md  COMPATIBILITY.md  PACKAGING.md
installer/windows/: README.md  launcher.py  netgrip.iss  netgrip.spec
scripts/: build-windows.ps1  grab_screenshots.py  install-linux.sh  make-ico.py  release.sh
src/netgrip/: __init__.py  __main__.py  app.py  cli.py
src/netgrip/core/: __init__.py  actions.py  backends.py  demo.py  display.py  firewall.py  layout.py  model.py  persist.py  persist_link.py  probe.py  runner.py  sshhosts.py  store.py
src/netgrip/resources/: __init__.py
src/netgrip/ui/: __init__.py  branding.py  canvas.py  dialogs.py  glyphs.py  items.py  legend.py  main_window.py  theme.py  worker.py
tests/: test_actions.py  test_backends.py  test_cli.py  test_display.py  test_firewall.py  test_layout.py  test_model.py  test_nftables.py  test_persist.py  test_persist_link.py  test_probe.py  test_runner.py  test_sshhosts.py  test_store.py
