[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "netgrip"
version = "0.4.0"
description = "Visual, drag-and-drop network interface manager for Linux"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "NetGrip contributors" }]
keywords = ["network", "nic", "vlan", "bond", "iproute2", "gui", "qt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = ["PySide6>=6.5"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/theyoungrossco/netgrip"
Issues = "https://github.com/theyoungrossco/netgrip/issues"
Changelog = "https://github.com/theyoungrossco/netgrip/blob/main/CHANGELOG.md"

[project.gui-scripts]
netgrip = "netgrip.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"netgrip.resources" = ["*.svg"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
